--- a/index.html
+++ b/index.html
@@ -1,105 +1,253 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CV Cristian Salinas</title>
-  </head>
-  <body>
-    <title>Curriculum Vitae</title>
-    <h1>Cristian M. Salinas Orrego</h1>
-    <h2>Ingeniero Comercial</h2>
-    <img
-      src="./assets/yop.jpeg"
-      alt="Cristian Salinas IMagen"
-      width="200"
-      height="200"
+    <title>CV Cristian Salinas - Ingeniero Comercial</title>
+
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
     />
-    <h2>Perfil Profesional</h2>
-    <h5>
-      Ingeniero Comercial de la Universidad Técnica Federico Santa María con
-      experiencia en análisis de datos, gestión administrativa y liderazgo,
-      experto en Excel y aprendiendo sobre desarrollo de páginas Webs.
-    </h5>
 
-    <h2>Información</h2>
-    <ol>
-      <li>
-        <strong>Datos Personales</strong>
-        <ul>
-          <li>Nombre: Cristian M. Salinas Orrego</li>
-          <li>Nacimiento: Año 2000</li>
-          <li>Licencia de conducir: Clase B</li>
-        </ul>
-      </li>
-      <li>
-        <strong>Contacto</strong>
-        <ul>
-          <li>Teléfono: +569 993322519</li>
-          <li>Email: cristian.salinasor@gmail.com</li>
-          <li>
-            <a
-              href="https://www.linkedin.com/in/cristian-salinas-orrego-a229061b2/"
-              target="_blank"
-              >Linkedin</a
-            >
-          </li>
-          <li>
-            <a href="https://www.instagram.com/wisbly/" target="_blank"
-              >Instagram</a
-            >
-          </li>
-        </ul>
-      </li>
-      <li>
-        <strong>Herramientas</strong>
-        <ul>
-          <li>Excel Avanzado</li>
-          <li>VBA</li>
-          <li>Tableu</li>
-          <li>Power BI</li>
-          <li>HTML</li>
-        </ul>
-      </li>
-      <li>
-        <strong>Proyectos</strong>
-        <ul>
-          <li>
-            <a href="./portafolio.html" target="_blank">Portafolio</a>
-          </li>
-        </ul>
-      </li>
-    </ol>
+    <!-- Font Awesome para iconos -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
 
-    <h2>Formación</h2>
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
 
-    <table>
-      <tb>
-        <th>Lugar</th>
-        <th>Título</th>
-        <th>Institución</th>
-        <th>Fecha</th>
-      </tb>
-      <tb>
-        <tr>
-          <td>Chile.</td>
-          <td>Desarrollador Full-Stack.</td>
-          <td>Desafio LATAM.</td>
-          <td>2025 - Actual</td>
-        </tr>
-        <tr>
-          <td>Valparaíso, Chile.</td>
-          <td>Ingeniero Comercial.</td>
-          <td>Universidad Técnica Federico Santa María.</td>
-          <td>2019 - 2024</td>
-        </tr>
-        <tr>
-          <td>Guadalajara, México.</td>
-          <td>Intercambio Academico.</td>
-          <td>Universidad de Guadalajara.</td>
-          <td>2023</td>
-        </tr>
-      </tb>
-    </table>
+    <!-- CSS Personalizado -->
+    <link rel="stylesheet" href="./assets/css/style.css" />
+  </head>
+
+  <body>
+    <!-- Header/Hero Section -->
+    <header class="hero-section">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-8">
+            <h1 class="display-4 fw-bold mb-3">Cristian M. Salinas Orrego</h1>
+            <h2 class="h3 mb-4">Ingeniero Comercial</h2>
+            <p class="lead mb-4">
+              Ingeniero Comercial de la Universidad Técnica Federico Santa María
+              con experiencia en análisis de datos, gestión administrativa y
+              liderazgo, experto en Excel y aprendiendo sobre desarrollo de
+              páginas Webs.
+            </p>
+            <div class="d-flex gap-3 flex-wrap">
+              <a href="./portafolio.html" class="btn btn-light btn-lg">
+                <i class="fas fa-briefcase me-2"></i>Ver Portafolio
+              </a>
+              <a
+                href="mailto:cristian.salinasor@gmail.com"
+                class="btn btn-outline-light btn-lg"
+              >
+                <i class="fas fa-envelope me-2"></i>Contactar
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-4 text-center">
+            <img
+              src="./assets/yop.jpeg"
+              alt="Cristian Salinas - Foto de Perfil"
+              class="img-fluid rounded-circle profile-image"
+              width="250"
+              height="250"
+            />
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <!-- Main Content -->
+    <main class="container my-5">
+      <!-- Información Personal y Contacto -->
+      <section class="section-card">
+        <h2 class="h3 mb-4 text-primary">
+          <i class="fas fa-user me-2"></i>Información Personal
+        </h2>
+        <div class="row">
+          <div class="col-md-6">
+            <h5 class="fw-bold mb-3">Datos Personales</h5>
+            <ul class="list-unstyled">
+              <li class="mb-2">
+                <i class="fas fa-id-card me-2 text-primary"></i>Nombre: Cristian
+                M. Salinas Orrego
+              </li>
+              <li class="mb-2">
+                <i class="fas fa-birthday-cake me-2 text-primary"></i
+                >Nacimiento: Año 2000
+              </li>
+              <li class="mb-2">
+                <i class="fas fa-car me-2 text-primary"></i>Licencia de
+                conducir: Clase B
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-6">
+            <h5 class="fw-bold mb-3">Contacto</h5>
+            <ul class="list-unstyled">
+              <li class="mb-2">
+                <i class="fas fa-phone me-2 text-primary"></i>
+                <a href="tel:+569993322519" class="contact-link"
+                  >+569 993322519</a
+                >
+              </li>
+              <li class="mb-2">
+                <i class="fas fa-envelope me-2 text-primary"></i>
+                <a
+                  href="mailto:cristian.salinasor@gmail.com"
+                  class="contact-link"
+                  >cristian.salinasor@gmail.com</a
+                >
+              </li>
+              <li class="mb-2">
+                <i class="fab fa-linkedin me-2 text-primary"></i>
+                <a
+                  href="https://www.linkedin.com/in/cristian-salinas-orrego-a229061b2/"
+                  target="_blank"
+                  class="contact-link"
+                  >LinkedIn</a
+                >
+              </li>
+              <li class="mb-2">
+                <i class="fab fa-instagram me-2 text-primary"></i>
+                <a
+                  href="https://www.instagram.com/wisbly/"
+                  target="_blank"
+                  class="contact-link"
+                  >Instagram</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+      <!-- Herramientas y Habilidades -->
+      <section class="section-card">
+        <h2 class="h3 mb-4 text-primary">
+          <i class="fas fa-tools me-2"></i>Herramientas y Habilidades
+        </h2>
+        <div class="d-flex flex-wrap gap-2">
+          <span class="skill-badge"
+            ><i class="fas fa-table me-1"></i>Excel Avanzado</span
+          >
+          <span class="skill-badge"><i class="fas fa-code me-1"></i>VBA</span>
+          <span class="skill-badge"
+            ><i class="fas fa-chart-bar me-1"></i>Tableau</span
+          >
+          <span class="skill-badge"
+            ><i class="fas fa-chart-line me-1"></i>Power BI</span
+          >
+          <span class="skill-badge"><i class="fab fa-html5 me-1"></i>HTML</span>
+        </div>
+      </section>
+
+      <!-- Formación Académica -->
+      <section class="section-card">
+        <h2 class="h3 mb-4 text-primary">
+          <i class="fas fa-graduation-cap me-2"></i>Formación Académica
+        </h2>
+        <div class="table-responsive">
+          <table class="table table-custom">
+            <thead>
+              <tr>
+                <th>Lugar</th>
+                <th>Título</th>
+                <th>Institución</th>
+                <th>Fecha</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>
+                  <i class="fas fa-map-marker-alt me-2 text-primary"></i>Chile
+                </td>
+                <td><strong>Desarrollador Full-Stack</strong></td>
+                <td>Desafío LATAM</td>
+                <td><span class="badge bg-success">2025 - Actual</span></td>
+              </tr>
+              <tr>
+                <td>
+                  <i class="fas fa-map-marker-alt me-2 text-primary"></i
+                  >Valparaíso, Chile
+                </td>
+                <td><strong>Ingeniero Comercial</strong></td>
+                <td>Universidad Técnica Federico Santa María</td>
+                <td><span class="badge bg-primary">2019 - 2024</span></td>
+              </tr>
+              <tr>
+                <td>
+                  <i class="fas fa-map-marker-alt me-2 text-primary"></i
+                  >Guadalajara, México
+                </td>
+                <td><strong>Intercambio Académico</strong></td>
+                <td>Universidad de Guadalajara</td>
+                <td><span class="badge bg-info">2023</span></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </section>
+    </main>
+
+    <!-- Footer -->
+    <footer class="footer-section">
+      <div class="container text-center">
+        <div class="row">
+          <div class="col-md-6">
+            <h5 class="mb-3">Cristian M. Salinas Orrego</h5>
+            <p class="mb-0">
+              Ingeniero Comercial | Analista de Datos | Desarrollador Web
+            </p>
+          </div>
+          <div class="col-md-6">
+            <div class="d-flex justify-content-center gap-3">
+              <a
+                href="mailto:cristian.salinasor@gmail.com"
+                class="text-white fs-4"
+              >
+                <i class="fas fa-envelope"></i>
+              </a>
+              <a
+                href="https://www.linkedin.com/in/cristian-salinas-orrego-a229061b2/"
+                target="_blank"
+                class="text-white fs-4"
+              >
+                <i class="fab fa-linkedin"></i>
+              </a>
+              <a
+                href="https://www.instagram.com/wisbly/"
+                target="_blank"
+                class="text-white fs-4"
+              >
+                <i class="fab fa-instagram"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+        <hr class="my-3" />
+        <p class="mb-0">
+          &copy; 2024 Cristian Salinas. Todos los derechos reservados.
+        </p>
+      </div>
+    </footer>
+
+    <!-- Bootstrap JS -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
