--- a/portafolio.html
+++ b/portafolio.html
@@ -1,44 +1,189 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es" data-bs-theme="dark">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Cristian M. Salinas — CV & Portafolio</title>
+    <meta
+      name="description"
+      content="CV y portafolio de Cristian M. Salinas: análisis de datos, Excel/VBA y desarrollo web con Bootstrap."
+    />
+    <!-- Bootstrap & Icons -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
+    <!-- Google Font (opcional) -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap"
+      rel="stylesheet"
+    />
+    <link href="./css/style.css" rel="stylesheet" />
   </head>
-
   <body>
-    <table border="1">
-      <caption>
-        Proyectos involucrados
-      </caption>
-      <thead>
-        <tr>
-          <th>Nombre del Proyecto</th>
-          <th>Captura de Pantalla</th>
-        </tr>
-      </thead>
-      <tr>
-        <td><a href="./index.html" target="_blank">CV Cristian Salinas</a></td>
-        <td>
-          <img
-            src="./assets/Imagen_CV_V01_page-0001.jpg"
-            alt="Proyecto 1"
-            width="400"
-          />
-        </td>
-      </tr>
-      <tr>
-        <td>Proyecto 2</td>
-        <td>
-          <img src="No hay" alt="Proyecto 2" width="400" />
-        </td>
-      </tr>
-      <tr>
-        <td>Proyecto 3</td>
-        <td>
-          <img src="no hay" alt="Proyecto 3" width="400" />
-        </td>
-      </tr>
-    </table>
+    <nav
+      class="navbar navbar-expand-lg bg-body sticky-top border-bottom border-secondary-subtle"
+    >
+      <div class="container">
+        <a class="navbar-brand fw-bold" href="#"
+          ><span class="text-brand">CV</span> Cristian Salinas Orrego</a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#nav"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div id="nav" class="collapse navbar-collapse">
+          <ul class="navbar-nav ms-auto align-items-lg-center gap-2">
+            <li class="nav-item">
+              <a class="nav-link" href="./portafolio.html"
+                >"Portafolio Link externo"</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#habilidades">Habilidades</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#experiencia">Experiencia</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#educacion">Educación</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+   
+    <!-- PROYECTOS -->
+    <section id="proyectos" class="py-5 bg-section">
+      <div class="container">
+        <h2 class="mb-4">Proyectos destacados</h2>
+        <div class="row g-4">
+          <!-- Proyecto 1 -->
+          <div class="col-md-6 col-lg-4">
+            <article class="card h-100 border-secondary-subtle">
+              <img
+                src="assets/proyecto1.jpg"
+                class="card-img-top"
+                alt="Dashboard de ventas"
+              />
+              <div class="card-body d-flex flex-column">
+                <h3 class="h5 card-title">Dashboard Ventas</h3>
+                <p class="card-text flex-grow-1">
+                  KPIs y alertas automáticas. Redujo 30% el tiempo de reporte.
+                </p>
+                <div class="mb-3 d-flex gap-1 flex-wrap">
+                  <span class="badge badge-tech">Excel</span>
+                  <span class="badge badge-tech">Power BI</span>
+                </div>
+                <div class="d-flex gap-2">
+                  <a
+                    class="btn btn-sm btn-brand"
+                    href="#"
+                    target="_blank"
+                    rel="noopener"
+                    >Demo</a
+                  >
+                  <a
+                    class="btn btn-sm btn-outline-light"
+                    href="#"
+                    target="_blank"
+                    rel="noopener"
+                    >Código</a
+                  >
+                </div>
+              </div>
+            </article>
+          </div>
+          <!-- Proyecto 2 (ejemplo) -->
+          <div class="col-md-6 col-lg-4">
+            <article class="card h-100 border-secondary-subtle">
+              <img
+                src="assets/proyecto2.jpg"
+                class="card-img-top"
+                alt="Sitio web Bootstrap"
+              />
+              <div class="card-body d-flex flex-column">
+                <h3 class="h5 card-title">Landing Bootstrap</h3>
+                <p class="card-text flex-grow-1">
+                  Sitio responsive con Lighthouse +25 pts en performance.
+                </p>
+                <div class="mb-3 d-flex gap-1 flex-wrap">
+                  <span class="badge badge-tech">HTML</span>
+                  <span class="badge badge-tech">Bootstrap</span>
+                </div>
+                <div class="d-flex gap-2">
+                  <a class="btn btn-sm btn-brand" href="#" target="_blank"
+                    >Demo</a
+                  >
+                  <a
+                    class="btn btn-sm btn-outline-light"
+                    href="#"
+                    target="_blank"
+                    >Código</a
+                  >
+                </div>
+              </div>
+            </article>
+          </div>
+          <!-- Duplica más cards según necesites -->
+        </div>
+      </div>
+    </section>
+
+ 
+
+    <!-- CONTACTO -->
+    <section id="contacto" class="py-5">
+      <div class="container">
+        <h2 class="mb-3">Contacto</h2>
+        <p class="text-secondary">¿Proyecto en mente? Conversemos.</p>
+        <div class="d-flex gap-2 flex-wrap">
+          <a class="btn btn-brand" href="mailto:cristian.salinasor@gmail.com"
+            ><i class="bi bi-envelope"></i> Email</a
+          >
+          <a
+            class="btn btn-outline-light"
+            href="https://www.linkedin.com/"
+            target="_blank"
+            rel="noopener"
+            ><i class="bi bi-linkedin"></i> LinkedIn</a
+          >
+          <a
+            class="btn btn-outline-light"
+            href="https://github.com/"
+            target="_blank"
+            rel="noopener"
+            ><i class="bi bi-github"></i> GitHub</a
+          >
+        </div>
+      </div>
+    </section>
+
+    <footer class="py-4 border-top border-secondary-subtle">
+      <div
+        class="container small text-secondary d-flex justify-content-between"
+      >
+        <span
+          >©
+          <script>
+            document.write(new Date().getFullYear());
+          </script>
+          Cristian M. Salinas</span
+        >
+        <a href="#top">Volver arriba ↑</a>
+      </div>
+    </footer>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
