--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
       </div>
     </nav>
 
-  
     <header class="hero py-5">
       <div class="container">
         <div class="row align-items-center g-4">
@@ -68,10 +67,10 @@
               <img
                 src="./assets/img/CV_01.jpeg"
                 alt="Foto de Cristian Salinas"
-                class="img-fluid rounded-4 w-25 shadow"
+                class="img-fluid rounded-4 shadow"
               />
             </div>
-            <h1 class="display-5 fw-800 mb-3">Cristian M. Salinas</h1>
+            <h1 class="display-5 fw-800 mb-3">Cristian M. Salinas Orrego</h1>
             <h1 class="text-brand">Ingeniero Comercial</h1>
 
             <p class="lead text-secondary">
@@ -93,20 +92,38 @@
             <div class="row row-cols-3 g-3 mt-4">
               <div class="col">
                 <div class="metric text-center">
-                  <div class="h4 mb-0">2025</div>
-                  <small>Títulado Ing. Comercial</small>
+                  <div class="h4 mb-0">Lugar</div>
+                  <small>Todo Chile</small>
                 </div>
               </div>
               <div class="col">
                 <div class="metric text-center">
-                  <div class="h4 mb-0">5</div>
-                  <small>Dashboards</small>
+                  <div class="h4 mb-0">Inmediata</div>
+                  <small>Disponibilidad</small>
                 </div>
               </div>
               <div class="col">
                 <div class="metric text-center">
-                  <div class="h4 mb-0">2026</div>
-                  <small>Bootcamp Full-Stack</small>
+                  <div class="h4 mb-0">Licencia</div>
+                  <small>Conducir Clase B</small>
+                </div>
+              </div>
+              <div class="col">
+                <div class="metric text-center">
+                  <div class="h4 mb-0">Pasatiempo</div>
+                  <small>Artes y Videojuego</small>
+                </div>
+              </div>
+              <div class="col">
+                <div class="metric text-center">
+                  <div class="h4 mb-0">Inglés B1</div>
+                  <small>Duolingo +600D</small>
+                </div>
+              </div>
+              <div class="col">
+                <div class="metric text-center">
+                  <div class="h4 mb-0">Emprendedor</div>
+                  <small>Ig:@ThingGoApp</small>
                 </div>
               </div>
             </div>
@@ -118,7 +135,7 @@
     <!-- HABILIDADES -->
     <section id="habilidades" class="py-5 bg-section">
       <div class="container">
-        <h2 class="mb-4">Habilidades</h2>
+        <h2 class="mb-4">Habilidades y Logros</h2>
         <div class="row g-4">
           <div class="col-md-6">
             <div class="mb-2 fw-semibold">• Excel / VBA Avanzado</div>
@@ -130,13 +147,13 @@
           <div class="col-md-6">
             <ul class="list-group list-group-flush">
               <li class="list-group-item bg-transparent">
-                ✔ Automatización de reportes (-40% tiempo)
+                ✔ Ganador Fondo Sercotec - Capital Semilla 2025
               </li>
               <li class="list-group-item bg-transparent">
-                ✔ Maquetación responsive y accesibilidad
+                ✔ Intercambio Académico - México 2023
               </li>
               <li class="list-group-item bg-transparent">
-                ✔ Trabajo colaborativo con Git/GitHub
+                ✔ Centro de Alumnos - Ing. Comercial 2020 & 2022
               </li>
             </ul>
           </div>
@@ -152,22 +169,108 @@
           <div class="timeline">
             <div class="item mb-4">
               <h3 class="h5 mb-1">
-                Analista de Datos — Empresa X
+                UTFSM — Análista de Datos y Gestión
                 <small class="text-secondary">2024–2025</small>
               </h3>
-              <p class="mb-1">
-                Automatización con VBA (–40% tiempo). Validaciones que reducen
-                errores (–25%).
-              </p>
+
+              <ul>
+                <li>Desarrollo de reportes y dashboards</li>
+                <li>ERP y SAP</li>
+                <li>Optimización de procesos administrativos</li>
+              </ul>
             </div>
             <div class="item">
               <h3 class="h5 mb-1">
-                Freelance — Desarrollo Web
-                <small class="text-secondary">2023–2024</small>
+                ThingGo App — Fundador
+                <small class="text-secondary">2024–Actual</small>
               </h3>
-              <p class="mb-1">
-                Sitios responsive con Bootstrap y optimización SEO/Performance.
-              </p>
+              <ul>
+                <li>Elaboración del modelo de Negocio</li>
+                <li>Gestión de Equipo</li>
+                <li>Ganador Fondo Capital Semilla Sercotec 2025</li>
+              </ul>
+            </div>
+            <div class="item">
+              <h3 class="h5 mb-1">
+                JetSMART — Prácticante de Operaciones
+                <small class="text-secondary">2024</small>
+              </h3>
+              <ul>
+                <li>Manejo de BBDD</li>
+                <li>Revisión de Facturas</li>
+              </ul>
+            </div>
+            <div class="item">
+              <h3 class="h5 mb-1">
+                Sistemas B Chile — Análista de Datos para Evento
+                <small class="text-secondary">2024</small>
+              </h3>
+              <ul>
+                <li>Elaboración y manejo de BBDD</li>
+                <li>Contacto con Empresas</li>
+                <li>Apoyo general en Evento Empresas Sistema B 2024</li>
+              </ul>
+            </div>
+            <div class="item">
+              <h3 class="h5 mb-1">
+                UTFSM — Ayudantías
+                <small class="text-secondary">2020 - 2024</small>
+              </h3>
+              <ul>
+                <li>
+                  Microeconomía
+                  <small class="text-secondary">2020 - 2022</small>
+                </li>
+                <li>
+                  Contabilidad Financiera
+                  <small class="text-secondary">2020 - 2021</small>
+                </li>
+                <li>Economía 1-A <small class="text-secondary">2022</small></li>
+                <li>
+                  Sistema Híbrido Ing. Comercial Vespertino
+                  <small class="text-secondary">2022 - 2023</small>
+                </li>
+                <li>
+                  Sistema Híbrido Magister in Business Administration
+                  <small class="text-secondary">2022 - 2024</small>
+                </li>
+              </ul>
+            </div>
+            <div class="item">
+              <h3 class="h5 mb-1">
+                Electronika Ltda — Prácticante de Análisis de datos
+                <small class="text-secondary">2022</small>
+              </h3>
+              <ul>
+                <li>Elaboración y manejo de BBDD</li>
+                <li>Estudio de Mercado</li>
+                <li>Apoyo general en el área de ventas</li>
+              </ul>
+            </div>
+            <div class="item">
+              <h3 class="h5 mb-1">
+                Emprendimientos - Varios
+                <small class="text-secondary">2017 - Actual</small>
+              </h3>
+              <ul>
+                <li>
+                  ThingGo App
+                  <small class="text-secondary">2023 - Actual</small>
+                </li>
+                <li>
+                  Chocolates Quetzal <small class="text-secondary">2022</small>
+                </li>
+                <li>
+                  Dulces Aviadora <small class="text-secondary">2022</small>
+                </li>
+                <li>
+                  Limonadas Manchitas
+                  <small class="text-secondary">2020 - 2021</small>
+                </li>
+                <li>
+                  Ventas de Dulces <small class="text-secondary">2017</small>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
@@ -203,8 +306,18 @@
           </div>
           <div class="col-md-6">
             <div class="p-3 border rounded-4 border-secondary-subtle">
-              <div class="fw-semibold">Diplomado Desarrollo de Páginas Web</div>
+              <div class="fw-semibold">
+                Diseño Web y Experiencia de Usuario (UX/UI)
+              </div>
               <small class="text-secondary">Diploma AIEP - SENCE (2025)</small>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="p-3 border rounded-4 border-secondary-subtle">
+              <div class="fw-semibold">Licenciatura Enseñanza Media</div>
+              <small class="text-secondary"
+                >Liceo Santa Marta - Vallenar (2014 - 2018)</small
+              >
             </div>
           </div>
         </div>
