--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     </section>
 
     <!-- Experiencia -->
-    <section id="proyectos" class="py-5">
+    <section id="Experiencia" class="py-5">
       <div class="container">
         <div class="container">
           <h2 class="mb-4">Experiencia</h2>
