--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     />
     <link href="./assets/css/style.css" rel="stylesheet" />
   </head>
+
+  <!--Muy buen trabajo compañero, gracias por compartir tu repositorio-->
+
   <body>
     <nav
       class="navbar navbar-expand-lg bg-body sticky-top border-bottom border-secondary-subtle"
